dropdown z-index fixed

--- a/src/components/ui/dropdown-menu/dropdown-menu.module.scss
+++ b/src/components/ui/dropdown-menu/dropdown-menu.module.scss
@@ -5,11 +5,12 @@ button {
 
 .DropdownMenuContent {
   position: relative;
+  z-index: 101;
 
   max-width: var(--radix-dropdown-menu-content-available-width);
   padding: 12px;
 
-  background-color: var(--color-dark-500);
+  background-color: var(--color-dark-700);
   border: 1px solid var(--color-dark-100);
   border-radius: 4px;
 
@@ -50,7 +51,7 @@ i {
 
   padding: 4px;
 
-  background: var(--color-dark-500);
+  background: var(--color-dark-700);
   border: solid var(--color-dark-100);
   border-width: 0 1px 1px 0;
 }
